2002-11-20  Neal H. Walfield  <neal@g10code.de>

	* assuan-socket-connect.c (assuan_socket_connect): Pass PF_LOCAL
	to socket(), not AF_UNIX: it expects a PF_* macro and the former
	is more portable.
	(assuan_socket_connect): Use AF_LOCAL, not AF_UNIX which is more
	POSIXy.

2002-11-20  Neal H. Walfield  <neal@g10code.de>

	* assuan-defs.h (struct assuan_io): New structure.
	(struct assuan_context_s): New field, io.
	(_assuan_read): Depreciated.
	(_assuan_write): Likewise.
	* assuan-pipe-server.c: Include <unistd.h>.
	(pipe_reader): New function.
	(pipe_writer): Likewise.
	(_assuan_new_context.IO): New local static.  Set to pipe_reader
	and pipe_writer.  Use it to initialize new context.
	* assuan-socket-connect.c (socket_reader): New function.
	(socket_writer): New function.
	(assuan_socket_connect.IO): New local static.  Set to socket_reader
	and socket_writer.  Use it to initialize new context.
	* assuan-buffer.c (writen): Take an ASSUAN_CONTEXT rather than a
	file descriptor.  Do not use _assuan_write but the write method
	in the supplied context.
	(readline): Likewise for _assuan_read.
	(assuan_write_line): When calling writen, pass CTX; not the file
	descriptor directly.
	(_assuan_cookie_write_data): Likewise.
	(_assuan_cookie_write_flush): Likewise.
	(_assuan_read_line): Likewise for readline.
	* Makefile.am (libassuan_a_SOURCES): Remove assuan-io.c.
	* assuan-io.c: Removed.

2002-11-10  Werner Koch  <wk@gnupg.org>

	* assuan-pipe-connect.c (assuan_pipe_connect): Changed the order
	of the dups to handle cases where we have already used fd 2 for
	other things.

2002-10-31  Neal H. Walfield  <neal@g10code.de>

	* assuan-util.c: Include <ctype.h>.
	(_assuan_log_print_buffer): Elide the magic numbers preferring the
	standard isfoo functions.  Use putc_unlocked where possible.
	(_assuan_log_sanitized_string): Rewrite to use putc_unlocked and
	the isfoo functions.

2002-09-05  Neal H. Walfield  <neal@g10code.de>
